FLAS-15 Add styles

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,14 @@
+/*----ABSTRACT----*/
+/*--------------*/
+/*----THEMES----*/
 body {
-    background-color: skyblue;
+  background-color: white;
 }
+
+/*--------------*/
+/*----LAYOUT----*/
+/*--------------*/
+/*----COMPONENTS----*/
+/*--------------*/
+
+/*# sourceMappingURL=app.css.map */
