--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,13 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% include 'pages/parts/header.html.twig' %}
+
+        <section id="main">
+            {% block body %}
+            {% endblock %}
+        </section>
+
+        {% include 'pages/parts/footer.html.twig' %}
     </body>
 </html>
