--- a/templates/pages/parts/header.html.twig
+++ b/templates/pages/parts/header.html.twig
@@ -3,11 +3,11 @@
         <div class="row">
             <div class="col-md-4">
                 {% if app.user %}
-                    Logged as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                    Zalogowany jako {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Wyloguj</a>
                 {% endif %}
             </div>
             <div class="col-md-4 text-center">
-                <h5 class="main-title">Flashcards</h5>
+                <h2 class="main-title">Fiszki</h2>
             </div>
         </div>
     </div>
