--- a/templates/form/login.html.twig
+++ b/templates/form/login.html.twig
@@ -1,5 +1,5 @@
 {% block login %}
-    <form method="post">
+    <form method="post" action="{{ path('app_home') }}">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
@@ -15,9 +15,7 @@
         <label for="password">Hasło</label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <br/>
         <div class="text-center">
