FLAS-24 Switch from AssetMapper to Webpack encore

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,14 +1,3 @@
-/*----ABSTRACT----*/
-/*--------------*/
-/*----THEMES----*/
 body {
-  background-color: white;
+    background-color: lightgray;
 }
-
-/*--------------*/
-/*----LAYOUT----*/
-/*--------------*/
-/*----COMPONENTS----*/
-/*--------------*/
-
-/*# sourceMappingURL=app.css.map */
