FLAS-24 Install bootrstrap for webpack

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,3 +12,6 @@
 /*----COMPONENTS----*/
 //@import 'components/buttons';
 /*--------------*/
+/*----LIB----*/
+@import "~bootstrap/scss/bootstrap";
+/*--------------*/
