FLAS-24 Install react

--- a/templates/pages/panel.html.twig
+++ b/templates/pages/panel.html.twig
@@ -13,6 +13,7 @@
             </div>
             <div class="col-8">
                 {% block content %}
+                    <div id="root">Loading...</div>
                 {% endblock %}
             </div>
             <div class="col-2">
