FLAS-27 Show success alert

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,7 @@
 /*--------------*/
 /*----THEMES----*/
 @import 'themes/theme';
+@import "themes/icons";
 /*--------------*/
 /*----LAYOUT----*/
 //@import 'layout/header';
