Feature/flas 7 lessons (#3)
* FLAS-24 Switch from AssetMapper to Webpack encore

* FLAS-24 Install bootrstrap for webpack

* FLAS-24 Install react

* FLAS-25 Remove old vendor

* FLAS-25 Add router

* FLAS-25 Restrict panel for log in user

* FLAS-25 Add init function

* FLAS-25 Add 'Add lesson' buttons

* FLAS-25 Add dialog component

* FLAS-25 Fit dialog form

* FLAS-25 Add lesson entity, repo and controller

* FLAS-25 Handle SaveLesson event

* FLAS-25 Add lesson feature

* FLAS-26 Add Lesson services

* FLAS-26 Refactor LessonController

* FLAS-26 Dispatch add lesson event

* FLAS-27 Add lesson list ui

* FLAS-27 Display whole lesson list

* FLAS-27 Add findPaginatedLesson

* FLAS-27 Add api pagination response

* FLAS-27 Implement front pagination

* FLAS-27 Show success alert

* FLAS-37 Display dialog question

* FLAS-37 Add remove event

* FLAS-37 Remove lesson

* FLAS-37 Display success message

* FLAS-40 Update Lesson by add user

* FLAS-40 Restrict passed by api user data

* FLAS-41 Fetch lesson restricted to user

* FLAS-39 Refactor

* FLAS-38 Add LessonServicesTest

* FLAS-38 Add LessonVoter

* FLAS-38 Add LessonControllerTest

* FLAS-38 Additional refactor

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,7 @@
 /*--------------*/
 /*----THEMES----*/
 @import 'themes/theme';
+@import "themes/icons";
 /*--------------*/
 /*----LAYOUT----*/
 //@import 'layout/header';
@@ -11,4 +12,7 @@
 /*--------------*/
 /*----COMPONENTS----*/
 //@import 'components/buttons';
+/*--------------*/
+/*----LIB----*/
+@import "~bootstrap/scss/bootstrap";
 /*--------------*/
